--- a/koreacovid.html
+++ b/koreacovid.html
@@ -385,8 +385,8 @@ summary {
 <div id="this-is-contained-in-a-downloadable-zip-file-from-kaggle" class="section level3">
 <h3>This is contained in a downloadable zip file from kaggle</h3>
 <p>Some of the data was uncoded for sex - sex must be just male or female 77 of the data entries were coded sex as blank, so we omit these. state of a patient must be died or alive - we adjust that as well</p>
-<p><span class="math inline">\(H_0\)</span> There is no difference between the amount of people dying from covid<br />
-<span class="math inline">\(H_a\)</span> There is a difference between the amount of people dying from covid</p>
+<p><span class="math inline">\(H_0\)</span> There is no difference between the amount of men compared to women that die from covid 19.<br />
+<span class="math inline">\(H_a\)</span> There is a difference between the amount of men compared to women that die from covid19.</p>
 </div>
 <div id="question-1---is-dying-independent-of-sex" class="section level1">
 <h1>Question 1 - Is dying independent of sex</h1>
@@ -478,8 +478,8 @@ The odds of dying are 2.3 to 1</p>
 <div id="conclusions" class="section level2">
 <h2>Conclusions</h2>
 <p>The p value is 0.001 which is less than 0.05<br />
-We reject the null hypothesis, there is a relationship between the amount of people dying<br />
-The odds ratio is 2.3 to 1</p>
+The odds ratio is 2.3 to 1<br />
+We reject the null hypothesis, there is no difference between men and women with regard to dying from covid 19.</p>
 </div>
 </div>
 
